Removed modifier from class name because it's no longer in use and this prevents the 3 images from displaying on mobile

--- a/app/scss/components/intro.scss
+++ b/app/scss/components/intro.scss
@@ -42,7 +42,7 @@
 			grid-template-columns: repeat(3, 1fr);
 			gap: clamp(0.25em, 2vw, 1em);
 			
-			.slideshow__slide--vw600 {
+			.slideshow__slide {
 				opacity: 1;
 				z-index: 1;
 				grid-column: auto;
